--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 /* フォント */
-.sawarabi-mincho-regular {
-    font-family: "Sawarabi Mincho", serif;
+.biz-udpmincho-regular {
+    font-family: "BIZ UDPMincho", serif;
     font-weight: 400;
     font-style: normal;
 }
-.sawarabi-gothic-regular {
-    font-family: "Sawarabi Gothic", serif;
+.biz-udpgothic-regular {
+    font-family: "BIZ UDPGothic", serif;
     font-weight: 400;
     font-style: normal;
 }
